@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: July 7, 2010</p>
+      <p>Last Updated: July 11, 2010</p>
     </td>
   </tr>
 </table>
@@ -1848,7 +1848,9 @@ nuttx-5.8 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	  by application software.
 	* include/net/uip/igmp.h and uip-igmp.h - Add header files ini
 	  preparation for NuttX IGMP support
-	* net/uip/uip_igmpinit.c, uip_igmpgroup.c - Add IGMP logic.
+	* net/uip/uip_igmp*.c - Add IGMP support (untested on initial
+	  checkin).
+	* examples/igmp - Add a trivial test for IGMP (much more is needed)
 
 pascal-2.1 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
